# sfmlTest

./: CMakeLists.txt
src/: assets.cpp  assets.h  core.h  main.cpp  village.cpp  village.h
